# rust-tiny-renderer

./: .gitignore  Cargo.toml  README.md
src/: egui_window.rs  lib.rs  main.rs  math.rs  model.rs  rasterizer.rs  tga.rs
tests/: create_tga_file.rs  egui_window.rs  obj_model.rs  rasterizer.rs
