[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
rand = "0.8"
eframe = "0.19"
image = { version = "0.24", features = ["png"] }
egui_extras = { version = "0.19", features = ["image"] }
